Improve and add more content - install Lightning CSS, hopefully I'll use it - update NPM package versions - convert the home image to WEBP format for faster loading with less size - improve the website's responsive design - improve some interaction features, e.g. input form keyboard actions

--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -10,7 +10,7 @@
             "signUp": "Sign up"
         },
         "home": {
-            "title1": "It's time to ditch the spreadsheets and physical paper.",
+            "title1": "It's time to ditch the spreadsheets and pen & paper.",
             "par1": "Supplend takes care of all the inventory changes, details and item tracking.",
             "btn1": "Sign up for free",
             "title2": "Coming soon to your Desktop and Mobile platforms!",
