--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -11,10 +11,10 @@
         },
         "home": {
             "title1": "It's time to ditch the spreadsheets and pen & paper.",
-            "par1": "Supplend takes care of all the inventory changes, details and item tracking.",
+            "par1": "Distribunity takes care of all the inventory changes, details and item tracking.",
             "btn1": "Sign up for free",
             "title2": "Coming soon to your Desktop and Mobile platforms!",
-            "par2": "We're planning to port Supplend as a standalone installed application for your devices.",
+            "par2": "We're planning to port Distribunity as a standalone installed application for your devices.",
             "btn2": "Notify me when it happens"
         },
         "news": {
@@ -23,7 +23,5 @@
             "next": "Next"
         }
     },
-    "app": {
-
-    }
+    "app": {}
 }
